# couchbase-lite-C

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CouchbaseLiteC.pc.in  Doxyfile  Jenkinsfile  README.md  build.sh  cblite.pc.in  test.sh
.github/workflows/: androidbuild.yml  applebuild.yml  build.yml  build_android.yml  build_android.yml.disabled  build_ios.yml  check_deps.yml  check_exp.yml  uwpbuild.yml  warn_release.yml  xcodebuild.yml
CBL_C.xcodeproj/: project.pbxproj
CBL_C.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/: CouchbaseLite.modulemap  Framework-Info.plist  build_python.sh  copy_exports.sh  generate_edition_header.sh  generate_exports.sh  mergeIntoStaticLib-Makefile.txt  mergeIntoStaticLib.sh
Xcode/xcconfigs/: CBL_Dylib_Release.xcconfig  CBL_Framework.xcconfig  CBL_Framework_Debug.xcconfig  CBL_Framework_Release.xcconfig  CBL_Tests.xcconfig  CBL_dylib.xcconfig  CBL_static.xcconfig  CouchbaseLiteTests-iOS-App.xcconfig  CouchbaseLiteTests-iOS.xcconfig  CouchbaseLiteTests.xcconfig  Debug.xcconfig  Project.xcconfig  Project_Debug.xcconfig  Project_Debug_EE.xcconfig  Project_Release.xcconfig  Project_Release_EE.xcconfig  Release.xcconfig  Tests.xcconfig  XCTests.xcconfig
bindings/nim/: CouchbaseLite.nim  CouchbaseLite.nimble  Fleece.nim  README.md  build.sh  check.nim  gen-bindings.sh  monitor.sh  nim.cfg  run.sh
bindings/python/: BuildPyCBL.py  README.md  build.sh
bindings/rust/: README.md  rust.sublime-project
bindings/rust/CouchbaseLite/: Cargo.toml  build.rs  wrapper.h
bindings/rust/CouchbaseLite/src/: base.rs  blob.rs  c_api.rs  database.rs  document.rs  error.rs  fleece.rs  fleece_mutable.rs  fleece_tests.rs  lib.rs  logging.rs  main.rs  query.rs  replicator.rs  slice.rs
bindings/rust/CouchbaseLite/src/cbl/: base.rs  database.rs  document.rs  mod.rs
bindings/rust/CouchbaseLite/tests/: simple_tests.rs
cmake/: CouchbaseLiteConfig.cmake.in  Toolchain-cross-arm64.cmake  Toolchain-cross-armhf.cmake  Toolchain-cross-base.cmake  Toolchain-cross-x64.cmake  Toolchain-pi.cmake  Toolchain-pi64.cmake  cblite.rc.in  generate_edition.cmake  platform_android.cmake  platform_apple.cmake  platform_linux.cmake  platform_linux_desktop.cmake  platform_win.cmake
docs/: index.html
include/cbl/: CBLBase.h  CBLBase.hh  CBLBlob.h  CBLCertificate.h  CBLCollection.h  CBLDatabase.h  CBLDatabase.hh  CBLDefaults.h  CBLDocument.h  CBLDocument.hh  CBLEncryptable.h  CBLIndex.h  CBLIndexTypes.h  CBLListener.h  CBLLog.h  CBLPlatform.h  CBLPrediction.h  CBLQuery.h  CBLQuery.hh  CBLQueryIndex.h  CBLQueryIndexTypes.h  CBLReplicator.h  CBLScope.h  CBLTLSIdentity.h  CBLURLEndpointListener.h  CBL_Compat.h  CBL_Edition.h.in  CouchbaseLite.h  CouchbaseLite.hh  cbl_config.h.in
include/cbl++/: Base.hh  Blob.hh  Collection.hh  CouchbaseLite.hh  Database.hh  Document.hh  Query.hh  Replicator.hh  VectorIndex.hh
jenkins/: CMakeLists.txt  CROSS.README.md  ci_build_android.sh  ci_build_ios.sh  ci_build_unix.sh  ci_build_win_desktop.ps1  ci_cross_build.py  couchbase-lite-c-linux-build.sh  cross_manifest.json  jenkins_ios.sh  jenkins_unix.sh  jenkins_win.ps1  linux-package-config.json  server_build_android.sh  server_build_ios.sh  server_build_unix.sh  server_build_win_desktop.ps1  server_cross_build.py  server_cross_unix.sh  strip.sh
jenkins/toolchain_defs/: .config.arm64  .config.armhf  .config.x86_64
python/: BuildPyCBL.py  build.sh  test.py
python/CouchbaseLite/: Blob.py  BuildPyCBL.py  Collections.py  Database.py  Document.py  Query.py  _PyCBL.c  common.py
python/test/: test.sh
scripts/: build.sh  build_android.sh  build_apple.sh  build_debug.sh  check_exp.py  check_platforms_exp.sh  copy_fleece_headers.sh  coverage.sh  coverage_cpp_macos.sh  coverage_macos.sh  download_vector_search_extension.ps1  download_vector_search_extension.sh  push_coverage_results.py  rewrite_framework_header_includes.sh
src/: CBL.def  CBL.exp  CBLBase.cc  CBLBase_CAPI.cc  CBLBlob+FILE.cc  CBLBlob+FILE.h  CBLBlob.cc  CBLBlob_CAPI.cc  CBLBlob_Internal.hh  CBLCertificate_Internal.hh  CBLChangesFeed.cc  CBLChangesFeed.h  CBLCheckpoint.cc  CBLCheckpoint.h  CBLCheckpoint_Internal.hh  CBLCollection.cc  CBLCollection_CAPI.cc  CBLCollection_Internal.hh  CBLCompat.h  CBLDatabase+Android.cc  CBLDatabase+Apple.mm  CBLDatabase+ObjC.mm  CBLDatabase.cc  CBLDatabase_CAPI.cc  CBLDatabase_Internal.hh  CBLDefaults_CAPI.cc  CBLDocument.cc  CBLDocument_CAPI.cc  CBLDocument_Internal.hh  CBLEncryptable_CAPI.cc  CBLEncryptable_Internal.hh  CBLIndex.cc  CBLIndex_CAPI.cc  CBLIndex_Internal.hh  CBLLog.cc  CBLLogSinks.cc  CBLLogSinks_CAPI.cc  CBLLogSinks_Internal.hh  CBLLog_Internal.hh  CBLPlatform_CAPI+Android.cc  (+41 more)
src/exports/: CBL.def  CBL.exp  CBLDefaults_EE_Exports.txt  CBLDefaults_Exports.txt  CBL_Android_Exports.txt  CBL_EE.exp  CBL_EE_Apple_Exports.txt  (+9 more)
test/: BlobTest.cc  BlobTest_Cpp.cc  CBLTest.c  CBLTest.cc  CBLTest.hh  CBLTest_Cpp.hh  CBLTestsMain.cpp  CMakeLists.txt  CollectionTest.cc  CollectionTest.cpp  CollectionTest_Cpp.cc  CouchbaseLiteTests.mm  DatabaseTest.cc  DatabaseTest_Android.cc  DatabaseTest_Cpp.cc  DocumentTest.cc  DocumentTest_Cpp.cc  LazyVectorIndexTest.cc  LogTest.cc  LogTest_Cpp.cc  PerfTest.cc  Platform_Apple.hh  Platform_Apple.mm  QueryTest.cc  QueryTest_Cpp.cc  ReplicatorCollectionTest.cc  ReplicatorCollectionTest_Cpp.cc  ReplicatorEETest.cc  ReplicatorP2PTest.cc  ReplicatorPropEncTest.cc  ReplicatorTest.cc  ReplicatorTest.hh  TLSIdentityTest+Apple.mm  TLSIdentityTest.cc  TLSIdentityTest.hh  URLEndpointListenerTest.cc  URLEndpointListenerTest.hh  VectorSearchTest.cc  VectorSearchTest.hh  VectorSearchTest_Cpp.cc  (+1 more)
test/assets/: README  cert_chain.pem  gen_cert_chain.sh  inter1_root.pem  leaf.key  leaf.pem  leaf_inter1_root.pem  names_100.json  private_key_of_self_signed_cert.pem  private_key_pass.pem  self_signed_cert.pem
test/cmake/: test_source_files.cmake
test/extensions/: README.md  version.txt
test/iOS/: AppDelegate.h  AppDelegate.m  CBLCatchTests.mm  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
(+259 files in other folders)
